Character manager: Notes field has been added to allow you to add notes that can be edited, they are saved directly to a file in character folder named character.notes, by saving directly to file it avoids keeping large amounts of text loaded into memory

--- a/src/css/characters.scss
+++ b/src/css/characters.scss
@@ -90,8 +90,19 @@ body {
 }
 
 #character-editor {
-    overflow: auto;
     position: absolute;
     top: 41px;
-    bottom: 0;    
+    bottom: 0;
+    right: 0;
+    left: 0;    
+}
+
+#notes {
+    position: absolute;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    top: 15px;
+    resize: none;
+    width: initial;
 }
