--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -835,7 +835,8 @@ select.property-grid-editor {
     outline: none;
 }
 
-.datagrid .property-grid-editor-dropdown input {
+.datagrid .property-grid-editor-dropdown input,
+.datagrid .property-grid-editor-flag input {
     padding-right: 20px !important;
 }
 
