--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -616,3 +616,19 @@ dialog {
     cursor: ew-resize;
     z-index: 999
 }
+
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: red;
+    border-radius: 50%;
+    display: inline-block;
+  }
+
+.dot-container {
+    display: inline-block;
+    bottom: 70px;
+    position: absolute;
+    left: 5px;
+    width:15px;
+}
