--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -124,7 +124,7 @@ body {
 
 .scroll-corner {
     background-color: #{$panelBack};
-    display:none;
+    box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
 }
 
 .scroll-split-button {
