--- a/src/css/cm.scss
+++ b/src/css/cm.scss
@@ -74,6 +74,7 @@ $tabHeight: 26;
     opacity: 0.5;
     cursor: pointer;
     outline: none;
+    height: 100%;
 }
 
 .cm-tabstrip li:hover {
@@ -181,6 +182,7 @@ $tabHeight: 26;
     font-size: 11px;
     margin-top: -2px;
     pointer-events: none;
+    overflow: hidden;
 }
 
 .cm-tabstrip li.active .title {
