Linux: Fix grip icon location as it seems linx font sizes are picky

--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -251,3 +251,8 @@ button.active.focus {
     left: 8px;
     top: -6px;
 }
+
+.linux .drag-grip span {
+    left: 10px !important;
+    top: -9px !important;
+}
