Fix command input styling and key events Move init function call to end instead of using ready event

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -183,13 +183,13 @@ body {
     box-sizing: border-box;
 }
 
-#commandinput {
+#commandInput {
     outline: none;
     resize: none;
     overflow: hidden;
 }
 
-#commandinput:focus {
+#commandInput:focus {
     outline: none;
 }
 
