--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -57,7 +57,7 @@ body {
     display: none;
 }
 
-#commandinput {
+#commandInput {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -67,7 +67,7 @@ body {
     padding: 2px;
 }
 
-#commandinput:focus {
+#commandInput:focus {
     border: 1px solid adadad;
 }
 
