More jquery stripping and refactoring Add loader splash screen to show client is loading

--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -247,3 +247,41 @@ button.active.focus {
     fill: currentColor;
     overflow: hidden;
 }
+
+#loader {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    z-index: 10000;
+    background-color: white;
+}
+
+#loader .text {
+    width:100%;
+    text-align:center;
+    font-size:3em;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    /* Light grey */
+    border-top: 16px solid #3498db;
+    /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin-left: calc(50% - 60px);
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
