--- a/src/css/window.scss
+++ b/src/css/window.scss
@@ -5,7 +5,7 @@ $tabBackground: menu;
 $tabHeight: 26;
 
 body {
-    /*@TODO temp fix until tabs support theming to prevent black to white flicking*/
+    /*TODO temp fix until tabs support theming to prevent black to white flicking*/
     background-color: rgb(255, 255, 255);
 }
 
