--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -932,3 +932,15 @@ body {
     background-color: #d4d4d4;    
     transition-delay: 1s;
 }
+
+#loader {
+    color: #5a5d5e;
+    background-color: black;
+}
+
+.loader {
+    border: 16px solid #5a5d5e;
+    /* Light grey */
+    border-top: 16px solid #d4d4d4;
+    /* Blue */
+}
