--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -1012,3 +1012,15 @@ body {
     background-color: #666;    
     transition-delay: 1s;
 }
+
+#loader {
+    color: #333;
+    background-color: black;
+}
+
+.loader {
+    border: 16px solid #666;
+    /* Light grey */
+    border-top: 16px solid #e0e0e0;
+    /* Blue */
+}
