--- a/src/themes/clean-large.scss
+++ b/src/themes/clean-large.scss
@@ -79,10 +79,14 @@ body {
 }
 
 #buttonbar {
-    top: 2px;
+    top: 28px;
     left: 2px;
     bottom: 2px;
     width: 48px;
+}
+
+#bb-scroll-up {
+    top: 28px;
 }
 
 #bb-scroll-down, #bb-scroll-up {
@@ -1051,6 +1055,44 @@ body {
 
 #status-ghost-bar {
     background-color: #d70000;
+}
+
+/** Grip button */
+.drag-grip {
+    color: #{$color};
+    background-color: maroon;
+    left: 2px;
+    top: 2px;    
+    height: 24px;
+}
+
+.drag-grip:hover {
+    background-color: #d70000;
+    color: #{$color};
+}
+
+.drag-grip:active {
+    background-color: #790000;
+    color: #{$color};
+}
+
+.drag-grip:focus {
+    color: #{$color};
+}
+
+.drag-grip span {
+    left: 8px;
+    top: -6px;
+}
+
+.drag-grip svg {
+    height: 20px;
+    top: -6px;
+}
+
+.drag-grip[style*='display: none']~#bb-scroll-up,
+.drag-grip[style*='display: none']~#buttonbar {
+    top: 2px;
 }
 
 #loader {
