--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -3,7 +3,7 @@ $borderColor: "#908271";
 $color: "wheat";
 
 body {
-    background-color:black;
+    background-color: black;
 }
 
 #display {
@@ -35,7 +35,7 @@ body {
 #display-split-bar:hover,
 #display-split-bar:active,
 #display-split-bar:focus {
-    background-color: #d70000;    
+    background-color: #d70000;
     transition-delay: 1s;
 }
 
@@ -72,9 +72,15 @@ body {
 }
 
 #buttonbar {
-    top: 2px;
+    top: 20px;
     left: 2px;
     bottom: 2px;
+}
+
+#bb-scroll-up {
+    left: 2px;
+    top: 20px;
+    background-size: contain;
 }
 
 #bb-scroll-down {
@@ -112,7 +118,7 @@ body {
     display: block !important;
     color: wheat;
     background-color: maroon !important;
-    border: 1px solid #{$borderColor} !important;    
+    border: 1px solid #{$borderColor} !important;
 }
 
 .scroll-split-button.active {
@@ -144,7 +150,10 @@ body {
     color: wheat;
 }
 
-.scroll-split-button.disabled, .scroll-split-button.disabled:hover, .scroll-split-button.disabled:active, .scroll-split-button.disabled:focus {
+.scroll-split-button.disabled,
+.scroll-split-button.disabled:hover,
+.scroll-split-button.disabled:active,
+.scroll-split-button.disabled:focus {
     background-color: maroon !important;
     color: #A88749;
 }
@@ -157,7 +166,9 @@ body {
     border-left: 1px solid #494238;
 }
 
-.scroll-disabled .scroll-thumb, .scroll-disabled .scroll-thumb:hover, .scroll-disabled .scroll-thumb:active {
+.scroll-disabled .scroll-thumb,
+.scroll-disabled .scroll-thumb:hover,
+.scroll-disabled .scroll-thumb:active {
     background: rgba(51, 48, 43, 0.4);
     border: 0px;
     color: #A88749;
@@ -406,11 +417,13 @@ body {
     background-image: url("#{$images}/status/weatherhailhard.png");
 }
 
-.weather-rain #environmentweather, .weather-zombie_rain #environmentweather {
+.weather-rain #environmentweather,
+.weather-zombie_rain #environmentweather {
     background-image: url("#{$images}/status/weatherrain.png");
 }
 
-.weather-rain.intensity-hard #environmentweather,.weather-zombie_rain.intensity-hard #environmentweather {
+.weather-rain.intensity-hard #environmentweather,
+.weather-zombie_rain.intensity-hard #environmentweather {
     background-image: url("#{$images}/status/weatherrainhard.png");
 }
 
@@ -434,7 +447,7 @@ body {
     background-image: url("#{$images}/status/weatherblood_rain.png");
 }
 
-.weather-blood_rain.intensity-hard #environmentweather{
+.weather-blood_rain.intensity-hard #environmentweather {
     background-image: url("#{$images}/status/weatherblood_rainhard.png");
 }
 
@@ -787,7 +800,7 @@ body {
     text-align: center;
     border-radius: 4px;
     border: 0px;
-    background-color: transparent;  
+    background-color: transparent;
 }
 
 #history-dropup .fa {
@@ -810,12 +823,13 @@ body {
 #btnTriggers {
     right: 22px;
 }
- 
+
 #btnParsing {
     right: 40px;
 }
 
-#btnTriggers, #btnParsing {
+#btnTriggers,
+#btnParsing {
     top: 3px;
     text-align: center;
     border-radius: 4px;
@@ -825,15 +839,22 @@ body {
     background-color: transparent;
 }
 
-#btnTriggers.on, #btnParsing.on {
+#btnTriggers.on,
+#btnParsing.on {
     background-color: #d70000;
 }
 
-#btnTriggers:hover, #btnParsing:hover, #btnTriggers.on:active, #btnParsing.on:active {
+#btnTriggers:hover,
+#btnParsing:hover,
+#btnTriggers.on:active,
+#btnParsing.on:active {
     background-color: #d70000;
 }
 
-#btnTriggers:active, #btnParsing:active, #btnTriggers.on:hover, #btnParsing.on:hover {
+#btnTriggers:active,
+#btnParsing:active,
+#btnTriggers.on:hover,
+#btnParsing.on:hover {
     background-color: #790000;
 }
 
@@ -887,7 +908,8 @@ body {
     color: wheat;
 }
 
-.button.on:active, .button.on:focus {
+.button.on:active,
+.button.on:focus {
     background-color: maroon;
     color: wheat;
 }
@@ -897,8 +919,9 @@ body {
     color: wheat;
 }
 
-.button:hover .overlay, .button.on:hover {
-    background-color: rgba(215,0,0, 0.40);
+.button:hover .overlay,
+.button.on:hover {
+    background-color: rgba(215, 0, 0, 0.40);
 }
 
 .button:active {
@@ -943,17 +966,49 @@ body {
     left: -2px;
     top: -7px;
     height: initial;
-    bottom: -14px;    
+    bottom: -14px;
     transition: 0s background-color;
 }
 
-#status-drag-bar:hover{
-    background-color: #d70000;    
+#status-drag-bar:hover {
+    background-color: #d70000;
     transition-delay: 1s;
 }
 
 #status-ghost-bar {
     background-color: #d70000;
+}
+
+/** Grip button */
+.drag-grip {
+    color: #{$color};
+    background-color: maroon;
+    left: 2px;
+    top: 2px;    
+}
+
+.drag-grip:hover {
+    background-color: #d70000;
+    color: #{$color};
+}
+
+.drag-grip:active {
+    background-color: #790000;
+    color: #{$color};
+}
+
+.drag-grip:focus {
+    color: #{$color};
+}
+
+.drag-grip span {
+    left: 8px;
+    top: -6px;
+}
+
+.drag-grip[style*='display: none']~#bb-scroll-up,
+.drag-grip[style*='display: none']~#buttonbar {
+    top: 2px;
 }
 
 #loader {
