--- a/src/themes/zen.scss
+++ b/src/themes/zen.scss
@@ -88,13 +88,17 @@ body {
 }
 
 #buttonbar {
-    top: 2px;
+    top: 20px;
     left: 2px;
     bottom: 2px;
 }
 
+#bb-scroll-up {
+    top: 20px;
+}
+
 #bb-scroll-down {
-    bottom: 0;
+    bottom: 0px;
 }
 
 .scroll-track {
@@ -971,9 +975,34 @@ body {
     transition-delay:1s;
 }
 
+/** Grip button */
+.drag-grip {
+    left: 2px;
+    top: 2px;    
+}
+
+.drag-grip:focus {
+    color: #{$color};
+}
+
+.drag-grip span {
+    left: 8px;
+    top: -6px;
+}
+
+.drag-grip svg {
+    left: -1px;
+    top: -12px;    
+}
+
+.drag-grip[style*='display: none']~#bb-scroll-up,
+.drag-grip[style*='display: none']~#buttonbar {
+    top: 2px;
+}
+
 #loader {
-    color: #c3d3b2;
-    background-color: black;
+    color: #333;
+    background-color: #dad2ba;
 }
 
 .loader {
