--- a/src/themes/clean-extra-large.scss
+++ b/src/themes/clean-extra-large.scss
@@ -3,7 +3,7 @@ $borderColor: "#908271";
 $color: "wheat";
 
 body {
-    background-color:black;
+    background-color: black;
 }
 
 #display {
@@ -42,12 +42,11 @@ body {
 #display-split-bar:hover,
 #display-split-bar:active,
 #display-split-bar:focus {
-    background-color: #d70000;    
+    background-color: #d70000;
     transition-delay: 1s;
 }
 
-#display-split-frame
-{
+#display-split-frame {
     right: 24px;
 }
 
@@ -89,7 +88,9 @@ body {
     bottom: 2px;
     width: 64px;
 }
-#bb-scroll-down, #bb-scroll-up {
+
+#bb-scroll-down,
+#bb-scroll-up {
     width: 64px;
 }
 
@@ -123,8 +124,7 @@ body {
 }
 
 .scroll-corner {
-    background-color: black;
-    display:none;
+    background-color: #191814;
     width: 24px;
     height: 24px;
 }
@@ -133,8 +133,8 @@ body {
     display: block !important;
     color: wheat;
     background-color: maroon !important;
-    border: 1px solid #{$borderColor} !important;  
-    font-size: 18px;  
+    border: 1px solid #{$borderColor} !important;
+    font-size: 18px;
 }
 
 .scroll-split-button.active {
@@ -166,7 +166,10 @@ body {
     color: wheat;
 }
 
-.scroll-split-button.disabled, .scroll-split-button.disabled:hover, .scroll-split-button.disabled:active, .scroll-split-button.disabled:focus {
+.scroll-split-button.disabled,
+.scroll-split-button.disabled:hover,
+.scroll-split-button.disabled:active,
+.scroll-split-button.disabled:focus {
     background-color: maroon !important;
     color: #A88749;
 }
@@ -179,7 +182,9 @@ body {
     border-left: 1px solid #494238;
 }
 
-.scroll-disabled .scroll-thumb, .scroll-disabled .scroll-thumb:hover, .scroll-disabled .scroll-thumb:active {
+.scroll-disabled .scroll-thumb,
+.scroll-disabled .scroll-thumb:hover,
+.scroll-disabled .scroll-thumb:active {
     background: rgba(51, 48, 43, 0.4);
     border: 0px;
     color: #A88749;
@@ -427,11 +432,13 @@ body {
     background-image: url("#{$images}/status/weatherhailhard.png");
 }
 
-.weather-rain #environmentweather, .weather-zombie_rain #environmentweather {
+.weather-rain #environmentweather,
+.weather-zombie_rain #environmentweather {
     background-image: url("#{$images}/status/weatherrain.png");
 }
 
-.weather-rain.intensity-hard #environmentweather,.weather-zombie_rain.intensity-hard #environmentweather {
+.weather-rain.intensity-hard #environmentweather,
+.weather-zombie_rain.intensity-hard #environmentweather {
     background-image: url("#{$images}/status/weatherrainhard.png");
 }
 
@@ -455,7 +462,7 @@ body {
     background-image: url("#{$images}/status/weatherblood_rain.png");
 }
 
-.weather-blood_rain.intensity-hard #environmentweather{
+.weather-blood_rain.intensity-hard #environmentweather {
     background-image: url("#{$images}/status/weatherblood_rainhard.png");
 }
 
@@ -566,6 +573,8 @@ body {
     width: 64px;
     height: 64px;
     left: 5px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #righthandweapon {
@@ -653,7 +662,7 @@ body {
 
 #fullbody {
     width: 256px;
-    height: 400px;    
+    height: 400px;
 }
 
 #health {
@@ -790,7 +799,7 @@ body {
     background: linear-gradient(to right, rgba(255, 50, 50, 1) 0%, rgba(255, 157, 0, 1) 25%, rgba(255, 255, 0, 1) 50%, rgba(189, 252, 0, 1) 75%, rgba(0, 255, 0, 1) 100%);
 }
 
-#hp-status>div {    
+#hp-status>div {
     height: 30px;
 }
 
@@ -854,7 +863,7 @@ body {
     text-align: center;
     border-radius: 4px;
     border: 0px;
-    background-color: transparent;  
+    background-color: transparent;
 }
 
 #history-dropup .fa {
@@ -884,12 +893,13 @@ body {
 #btnTriggers {
     right: 47px;
 }
- 
+
 #btnParsing {
     right: 91px;
 }
 
-#btnTriggers, #btnParsing {
+#btnTriggers,
+#btnParsing {
     top: 3px;
     text-align: center;
     border-radius: 4px;
@@ -899,15 +909,22 @@ body {
     background-color: transparent;
 }
 
-#btnTriggers.on, #btnParsing.on {
+#btnTriggers.on,
+#btnParsing.on {
     background-color: #d70000;
 }
 
-#btnTriggers:hover, #btnParsing:hover, #btnTriggers.on:active, #btnParsing.on:active {
+#btnTriggers:hover,
+#btnParsing:hover,
+#btnTriggers.on:active,
+#btnParsing.on:active {
     background-color: #d70000;
 }
 
-#btnTriggers:active, #btnParsing:active, #btnTriggers.on:hover, #btnParsing.on:hover {
+#btnTriggers:active,
+#btnParsing:active,
+#btnTriggers.on:hover,
+#btnParsing.on:hover {
     background-color: #790000;
 }
 
@@ -957,10 +974,11 @@ body {
     margin-left: 10px;
     width: 40px;
     height: 40px;
-    font-size: 40px;   
+    font-size: 40px;
 }
 
-.button .fa, .button-icon {
+.button .fa,
+.button-icon {
     width: 40px;
     height: 40px;
     font-size: 40px;
@@ -983,7 +1001,8 @@ body {
     color: wheat;
 }
 
-.button.on:active, .button.on:focus {
+.button.on:active,
+.button.on:focus {
     background-color: maroon;
     color: wheat;
 }
@@ -993,8 +1012,9 @@ body {
     color: wheat;
 }
 
-.button:hover .overlay, .button.on:hover {
-    background-color: rgba(215,0,0, 0.40);
+.button:hover .overlay,
+.button.on:hover {
+    background-color: rgba(215, 0, 0, 0.40);
 }
 
 .button:active {
@@ -1033,7 +1053,7 @@ body {
 .button-sm.on svg {
     top: 0px;
     width: 30px;
-    height: 30px;    
+    height: 30px;
     position: relative;
 }
 
@@ -1043,12 +1063,12 @@ body {
     left: -2px;
     top: -7px;
     height: initial;
-    bottom: -14px;    
+    bottom: -14px;
     transition: 0s background-color;
 }
 
-#status-drag-bar:hover{
-    background-color: #d70000;    
+#status-drag-bar:hover {
+    background-color: #d70000;
     transition-delay: 1s;
 }
 
