Add auto login support querying the character database Add lag in title support option back Add xterm title support back Fix issues with character title not being set on load from state data Fix tab update title to allow empty/blank title to clear title

--- a/src/css/window.scss
+++ b/src/css/window.scss
@@ -119,6 +119,10 @@ body {
     height: 21px;
 }
 
+.cm-tabstrip li .title::first-letter {
+    text-transform: uppercase;
+}
+
 .cm-tabstrip li.active .title {
     margin-top: -4px;
     position: relative;
