--- a/src/css/window.scss
+++ b/src/css/window.scss
@@ -33,6 +33,7 @@ body {
     line-height: #{$tabHeight}px;
     padding: 0 10px;
     padding-top: 2px;
+    padding-right: 26px;
 }
 
 .cm-tabstrip li {
@@ -222,6 +223,7 @@ body {
 #cm-scroll-left:hover,
 #cm-scroll-right:hover,
 #cm-scroll-dropdown:hover,
+#cm-add-tab a:hover,
 #cm-scroll-dropdown-container.open #cm-scroll-dropdown {
     background-color: $borderColor;
     color: white;
@@ -246,9 +248,14 @@ body {
 
 #cm-scroll-right {
     right: 12px;
+    right: 38px;
     border-left: 1px solid $borderColor;
     box-shadow: -3px 8px 8px 0px rgba(0, 0, 0, 0.75);
     z-index: 5;
+}
+
+#cm-add-tab[style*='display: none'] ~ #cm-scroll-right {
+    right: 12px;
 }
 
 #cm-scroll-dropdown,
@@ -263,6 +270,11 @@ body {
 
 .cm-tabstrip.scroll {
     padding-left: 20px;
+    padding-right: 32px;
+    padding-right: 56px;
+}
+
+#cm-add-tab[style*='display: none'] ~ .cm-tabstrip.scroll {
     padding-right: 32px;
 }
 
@@ -396,4 +408,47 @@ body {
     border-color: darken(rgb(214, 106, 247), 10%) !important;
     opacity: 1;
     color: black;
+}
+
+#cm-add-tab {
+    z-index: 1000;
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    width: 26px;
+    background-color: $tabBackground;
+}
+
+#cm-add-tab a {
+    width: 22px;
+    height: 22px;
+    margin-left: 2px;
+    margin-top: 2px;    
+    background-color: $tabBackground;
+    border: 1px solid $tabBackground;
+    display: block;
+    z-index: 1;
+    font-size: 13px;
+    text-align: center;
+    color: black;
+    text-shadow: 0px 1px #fff;
+    padding: 0;
+    outline: none;
+}
+
+#cm-add-tab .fa {
+    margin-top: 4px
+}
+
+#cm-add-tab a:hover {
+    border: 1px solid $color;
+    border-radius: 4px;
+}
+
+#cm-add-tab a:active {
+    border: 1px solid $color !important;
+    background-color: darken($borderColor, 10%) !important;
+    border-radius: 4px;
+    color: white;
+    text-shadow: 0 1px black;    
 }
