Progress dialog should be modal for code editor and mapper

--- a/src/css/window.scss
+++ b/src/css/window.scss
@@ -34,6 +34,7 @@ body {
     padding: 0 10px;
     padding-top: 2px;
     padding-right: 26px;
+    border-top: #ccc 1px solid;
 }
 
 .cm-tabstrip li {
