Hide tab close button if only 1 tab and show tabs enabled

--- a/src/css/window.scss
+++ b/src/css/window.scss
@@ -182,6 +182,10 @@ body {
     pointer-events: none;
 }
 
+.cm-tabstrip li:only-child .close {
+    display: none;
+}
+
 #cm-scroll-left .fa,
 #cm-scroll-right .fa {
     margin-top: 7px;
