Try and reduce flickering by setting the background based on set theme Make a global load theme system in preload to better handle loading themes Add lock layout and load layout preferences

--- a/src/css/window.scss
+++ b/src/css/window.scss
@@ -6,7 +6,8 @@ $tabHeight: 26;
 
 body {
     /*TODO temp fix until tabs support theming to prevent black to white flicking*/
-    background-color: rgb(255, 255, 255);
+    /*background-color: rgb(255, 255, 255);*/
+    background-color: #000;
 }
 
 .cm {
