--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -28,7 +28,8 @@ body {
     outline: none !important;
 }
 
-.btn-toolbar button, .panel-heading button {
+.btn-toolbar button,
+.panel-heading button {
     min-width: 26px;
 }
 
@@ -55,11 +56,14 @@ body {
     border: 1px solid transparent;
 }
 
-#btn-add-dropdown, .btn-caret {
+#btn-add-dropdown,
+.btn-caret {
     min-width: auto !important;
 }
 
-#editor-buttons > .btn, #editor-buttons > .btn-group, #editor-buttons > .input-group {
+#editor-buttons>.btn,
+#editor-buttons>.btn-group,
+#editor-buttons>.input-group {
     margin-left: 5px;
 }
 
@@ -191,7 +195,8 @@ body {
     display: block;
 }
 
-.output .error:hover, .output .warning:hover {
+.output .error:hover,
+.output .warning:hover {
     text-decoration: underline;
 }
 
@@ -216,12 +221,14 @@ body {
     float: left;
 }
 
-.statusbar span.left, .statusbar div.left {
+.statusbar span.left,
+.statusbar div.left {
     border-right: #ccc 1px solid;
     float: left;
 }
 
-.statusbar span.right, .statusbar div.left {
+.statusbar span.right,
+.statusbar div.left {
     float: right;
     border-left: #ccc 1px solid;
     text-align: center;
@@ -457,7 +464,9 @@ dialog .close {
     text-align: center;
 }
 
-.splash-screen h1, .splash-screen h3, .splash-screen h6 {
+.splash-screen h1,
+.splash-screen h3,
+.splash-screen h6 {
     margin: 0px;
 }
 
@@ -493,7 +502,8 @@ dialog .close {
     background-color: rgba(0, 0, 0, 0.071);
 }
 
-.editor-container, .diff-container {
+.editor-container,
+.diff-container {
     position: absolute;
     left: 0;
     right: 0;
@@ -715,284 +725,6 @@ cause test to be brighter but more bold looking
     user-select: text;
 }
 
-.property-grid {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 2px;
-    right: 2px;
-    padding: 0;
-    border: 1px solid #ccc;
-    margin: 0;
-    cursor: default;
-    background-color: white;
-    outline: none;
-    overflow: auto;
-}
-
-.property-grid-group {
-    background-color: rgb(244, 247, 252);
-    list-style-type: none;
-    border-bottom: 1px solid rgb(240, 240, 240);
-    padding-left: 20px;
-}
-
-.property-grid-group-label {
-    font-weight: bold;
-    padding-left: 2px;
-}
-
-.property-grid-item {
-    background-color: rgb(255, 255, 255);
-    list-style-type: none;
-    border-bottom: 1px solid rgb(244, 247, 252);
-    position: relative;
-}
-
-.property-grid-item-label {
-    background-color: rgb(255, 255, 255);
-    border-right: 1px solid rgb(244, 247, 252);
-    display: inline-block;
-    width: 125px;
-    padding-left: 2px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-.property-grid-item-value {
-    background-color: rgb(255, 255, 255);
-    display: inline-block;
-    padding-left: 2px;
-    position: absolute;
-    right: 0;
-    left: 125px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    bottom: 0;
-    top: 0;
-}
-
-.property-grid-item-value.default {
-    font-weight: bold;
-}
-
-.property-grid-item-value.readonly {
-    background-color: #fafafa;
-    color: silver;
-}
-
-.property-grid-group-items {
-    padding-left: 0px;
-}
-
-.property-grid-collapse.fa-chevron-down {
-    float: left;
-    margin-left: -18px;
-    margin-top: 1px;
-}
-
-.property-grid-collapse.fa-chevron-right {
-    float: left;
-    margin-left: -15px;
-    margin-top: 3px;
-}
-
-.property-grid-editor {
-    right: 0;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    position: absolute;
-    border: 0px;
-    padding-left: 2px;
-    width: 100%;
-    background-color: white;
-    color: black;
-}
-
-.property-grid-editor-button {
-    height: 20px;
-    top: 1px;
-    position: absolute;
-}
-
-.property-grid-editor-button-container {
-    border: 1px solid #f2cb7f;
-}
-
-select.property-grid-editor {
-    -webkit-appearance: none;
-    background: url(./../../assets/editor/select.png) no-repeat 100% 50%;
-    background-color: white;
-}
-
-.datagrid .property-grid-editor,
-.datagrid .property-grid-editor-dropdown input,
-.datagrid .property-grid-editor-flag input {
-    bottom: initial;
-    padding: 2px 4px;
-    outline: none;
-}
-
-.datagrid .property-grid-editor-dropdown input,
-.datagrid .property-grid-editor-flag input {
-    padding-right: 20px !important;
-}
-
-.datagrid .property-grid-editor-collection input {
-    bottom: initial;
-    padding: 1px 3px;
-    outline: none;
-}
-
-.datagrid input.property-grid-editor, .datagrid select.property-grid-editor {
-    border-right: 1px solid #f2cb7f;
-}
-
-.property-grid-editor input[type=checkbox],
-input[type=checkbox].property-grid-editor {
-    width: auto;
-}
-
-.property-grid-editor-dropdown textarea,
-.property-grid-editor-dropdown-fill textarea {
-    border: 0px;
-    outline: none;
-    padding: 0;
-    padding-left: 3px !important;
-    padding-right: 1px;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-}
-
-
-
-.property-grid-editor-collection input,
-.property-grid-editor-dropdown input,
-.property-grid-editor-dropdown-fill input,
-.property-grid-editor-flag input {
-    border: 0px;
-    outline: none;
-    padding: 0;
-    padding-left: 1px;
-    padding-right: 19px;
-}
-
-.property-grid-editor-dropdown textarea.single,
-.property-grid-editor-dropdown-fill textarea.single {
-    white-space: normal;
-    word-break: break-all;
-    word-wrap: break-word;
-}
-
-.property-grid-editor-collection,
-.property-grid-editor-dropdown,
-.property-grid-editor-dropdown-fill,
-.property-grid-editor-flag {
-    border: 1px solid #f2cb7f;
-    right: -1px;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 100%;
-    z-index: 100;
-    overflow: hidden;
-    background-color: white;
-    color: black;
-}
-
-.datagrid .property-grid-editor-collection,
-.datagrid .property-grid-editor-dropdown,
-.datagrid .property-grid-editor-dropdown-fill,
-.datagrid .property-grid-editor-flag {
-    border: 1px solid white;
-    border-right: 1px solid #f2cb7f;
-}
-
-.datagrid .property-grid-editor-collection,
-.datagrid .property-grid-editor-dropdown,
-.datagrid .property-grid-editor-flag {
-    height: 22px;
-}
-
-.property-grid-editor-dropdown-container,
-.property-grid-editor-dropdown-fill-container {
-    right: 19px;
-    position: absolute;
-    top: -1px;
-    left: 0;
-    bottom: 0;
-}
-
-.property-grid-editor-collection button,
-.property-grid-editor-dropdown button,
-.property-grid-editor-dropdown-fill button,
-.property-grid-editor-flag button {
-    width: 18px;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    position: absolute;
-    border: 0px;
-    padding: 0;
-    text-align: center;
-    color: black;
-}
-
-.grid-editor-dropdown {
-    z-index: 2147483647;
-}
-
-.grid-editor-dropdown.no-wrap {
-    white-space: nowrap;
-}
-
-.grid-editor-dropdown.single,
-.grid-editor-dropdown.no-wrap.single {
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    word-break: break-word;
-}
-
-.property-grid-editor-flag-dropdown {
-    overflow: auto;
-    background-color: white;
-    border: 1px solid #f2cb7f;
-    color: black;
-    outline: none;
-    z-index: 2147483647;
-}
-
-.property-grid-editor-flag-dropdown label {
-    width: 100%;
-    display: block;
-    padding-left: 2px;
-    padding-right: 2px;
-    margin: 0px;
-}
-
-.property-grid-editor-flag-dropdown-item {
-    cursor: default;
-}
-
-.property-grid-editor-flag-dropdown label:hover, .property-grid-editor-flag-dropdown div:hover {
-    background-color: rgba(135, 206, 250, 0.5);
-}
-
-.property-grid-editor-flag-dropdown div {
-    padding-left: 2px;
-    padding-right: 2px;
-    width: 100%;
-}
-
-.property-grid-editor-flag-dropdown div.property-grid-editor-flag-dropdown-item-group-item {
-    padding-left: 20px !important;
-}
 
 .panel-heading .control-label {
     width: 100%;
@@ -1064,13 +796,13 @@ input[type=checkbox].property-grid-editor {
     background: linear-gradient(to bottom, #9eceff 0%, #3399ff 100%);
 
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9eceff', endColorstr='#3399ff',GradientType=0 );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9eceff', endColorstr='#3399ff', GradientType=0);
 
     /* IE6-9 */
     color: white;
 }
 
-.dropdown-menu > li > a.changed {
+.dropdown-menu>li>a.changed {
     background-color: rgb(218, 255, 181);
     border-top: 1px solid rgb(119, 168, 69);
     border-bottom: 1px solid rgb(119, 168, 69);
@@ -1079,7 +811,7 @@ input[type=checkbox].property-grid-editor {
     background-image: none;
 }
 
-.dropdown-menu > li > a.new {
+.dropdown-menu>li>a.new {
     background-color: rgb(178, 226, 255);
     border-top: 1px solid rgb(94, 185, 242);
     border-bottom: 1px solid rgb(94, 185, 242);
@@ -1088,33 +820,33 @@ input[type=checkbox].property-grid-editor {
     background-image: none;
 }
 
-.dropdown-menu > li > a.new.active {
+.dropdown-menu>li>a.new.active {
     background-color: rgb(178, 226, 255);
     border-top: 1px solid rgb(247, 216, 106);
     border-bottom: 1px solid rgb(247, 216, 106);
     background-image: none;
 }
 
-.dropdown-menu > li > a.active {
+.dropdown-menu>li>a.active {
     background-color: rgb(249, 242, 217);
     border-top: 1px solid rgb(247, 216, 106);
     border-bottom: 1px solid rgb(247, 216, 106);
     background-image: none;
 }
 
-.dropdown-menu > li > a.active.changed {
+.dropdown-menu>li>a.active.changed {
     background-color: rgb(218, 255, 181);
     border-top: 1px solid rgb(247, 216, 106);
     border-bottom: 1px solid rgb(247, 216, 106);
     background-image: none;
 }
 
-.dropdown-menu > li > a:focus,
-.dropdown-menu > li > a.new.active:hover,
-.dropdown-menu > li > a.changed:hover,
-.dropdown-menu > li > a.new:hover,
-.dropdown-menu > li > a.active:hover,
-.dropdown-menu > li > a.active.changed:hover {
+.dropdown-menu>li>a:focus,
+.dropdown-menu>li>a.new.active:hover,
+.dropdown-menu>li>a.changed:hover,
+.dropdown-menu>li>a.new:hover,
+.dropdown-menu>li>a.active:hover,
+.dropdown-menu>li>a.active.changed:hover {
     background-color: #e8e8e8;
     background-image: -webkit-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
     background-image: -o-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
@@ -1125,11 +857,12 @@ input[type=checkbox].property-grid-editor {
     color: #000;
 }
 
-.dropdown-menu > li > a.main, .property-grid-editor-flag-dropdown-item-group {
+.dropdown-menu>li>a.main,
+.property-grid-editor-flag-dropdown-item-group {
     font-weight: bold;
 }
 
-.dropdown-menu > li > a.sub {
+.dropdown-menu>li>a.sub {
     padding-left: 40px;
 }
 
@@ -1268,7 +1001,7 @@ input[type=checkbox].property-grid-editor {
     top: 32px;
 }
 
-.area-editor-properties > .nav-tabs {
+.area-editor-properties>.nav-tabs {
     margin-right: 5px;
 }
 
