Fix theme loader bg colors to better match

--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -968,7 +968,7 @@ body {
 
 #loader {
     color: #5a5d5e;
-    background-color: black;
+    background-color: #{$panelBackground};
 }
 
 .loader {
