--- a/src/themes/lightgray.scss
+++ b/src/themes/lightgray.scss
@@ -1040,7 +1040,7 @@ body {
 
 #loader {
     color: #333;
-    background-color: #{$panelBackground};
+    background-color: #{$panelBackground};;
 }
 
 .loader {
