--- a/src/css/composer.scss
+++ b/src/css/composer.scss
@@ -1261,6 +1261,8 @@ i.mce-i-fa-open:before {
 .sm-mono23 {
     background-color: #EEEEEE !important;
 }
-
-
 /**color icon end**/
+
+.tox .tox-toolbar, .tox .tox-toolbar__overflow, .tox .tox-toolbar__primary {
+    background-attachment: local !important;
+}
