Mapper: change room property panel to property grid control Mapper: Room editor panel is now resizable

--- a/src/css/mapper.scss
+++ b/src/css/mapper.scss
@@ -1,4 +1,10 @@
 $mapper: './../../assets/mapper';
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
 #MapperCanvas {
     cursor: default;
     border: 1px solid grey;
@@ -10,7 +16,7 @@ $mapper: './../../assets/mapper';
     padding: 0px;
     margin: 0px;
     z-index: 1;
-    display: block;  
+    display: block;
 }
 
 .map-canvas {
@@ -151,4 +157,44 @@ a.disabled-link:hover {
 
 #select-area {
     max-width: 150px;
+}
+
+.splitter {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
+.splitter-panel {
+    position: absolute;
+    background-color: #f5f5f5;
+}
+
+.spitter-drag-bar {
+    background-color: transparent;
+    position: absolute;
+    z-index: 100;
+    background-color: #f5f5f5;
+    outline: none;
+}
+
+.splitter-ghost-bar {
+    background-color: #000;
+    opacity: 0.5;
+    position: absolute;
+    z-index: 999;
+    outline: none;
+}
+
+#map {
+    box-shadow: 0px 0px 40px 10px #7d6b53 inset;
+    background-color: #eae4d6;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
 }
