--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -312,6 +312,7 @@ body {
 .find-highlight.current {
     border-radius: 4px;
     background: rgb(116, 192, 114);
+    z-index: 10;
 }
 
 /* begin status */
