--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -185,7 +185,7 @@ body {
 
 .problem-display {
     position: absolute;
-    top: 31px;
+    top: 31px !important;
     bottom: 0;
     left: 0;
     right: 0;
