Code editor: better clear output icon and style

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -213,6 +213,10 @@ body {
     text-decoration: none;
 }
 
+.btn-clear:before {
+    background: #f5f5f5;
+}
+
 .output .error {
     color: red;
     text-decoration: none;
